Refactor Prettier configuration, add VSCode settings for Salesforce DX, and implement authentication and callout services in Apex

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
   "trailingComma": "none",
-  "plugins": [
-    "prettier-plugin-apex",
-    "@prettier/plugin-xml"
-  ],
+  "tabWidth": 4,
+  "useTabs": true,
+  "printWidth": 100,
+  "plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"],
   "overrides": [
     {
       "files": "**/lwc/**/*.html",
